# taigachat

./: .gitignore  NOTICE  README.md
.github/workflows/: checks.yml
Client/: .gitignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  svelte.config.js  task.mjs
Client/Authentication/: .gitignore  build.zig
Client/Public/: service-worker.js
Client/Source/: actions.ts  auth.ts  auto_updater_key.ts  call_controller.ts  device_permissions.ts  e2e_manager.js  emojis.js  icons.ts  index.ts  keybinds.ts  launcher_bridge.ts  message_format.ts  message_sender.ts  netcode.ts  notifications.ts  permission_requester.ts  png.ts  router_behaviour.ts  routes.ts  sounds.ts  strftime.ts  svelte_actions.ts  update_checker.ts
Client/Tools/: Client.wxs  artifact_tool.ts  package.json
Server/MediaWorker/: default.nix
Server/MediaWorker/sfu/: Cargo.toml
Server/MediaWorker/sfu/src/: lib.rs
Server/Source/: .prettierrc  db.js  info.js  last_modified.js  notifications.js  package-lock.json  roles.js  rooms.ts  server.js
client/: .gitignore  .prettierignore  .prettierrc  eslint.config.js  index.js  package.json  preload.js  snowpack.config.json  tsconfig.json  tsconfig.node.json  vite.config.mjs
client/AppLauncher/: Cargo.toml
client/Public/: manifest.json
client/Source/: activity_monitor.ts  acts.ts  auth_methods.ts  call.ts  changelog.ts  db.ts  debug_mode.js  dispatch.ts  edition.js  encoding_schemes.ts  immutable.ts  join_url.ts  options.ts  permissions.js  profiles.ts  sal.ts  schema.ts  store.ts  urls.ts  voice_config.ts
client/Tools/: LicenseAgreement.rtf  tsconfig.json
client/app-launcher/: Cargo.toml  build.rs
client/app-launcher/src/: main.rs  sal.rs
client/scripts/: Client.wxs  artifact_tool.ts  package.json  tsconfig.json
client/src/: actions.ts  activity_monitor.ts  acts.ts  appindex.css  auto_updater_key.ts  branding.ts  call.ts  call_controller.ts  changelog.ts  db.ts  dispatch.ts  emojis.ts  encoding_schemes.ts  icons.ts  immutable.ts  index.html  index.ts  join_url.ts  key_generator.ts  keybinds.ts  launcher_bridge.ts  message_format.ts  message_sender.ts  netcode.ts  options.ts  png.ts  profiles.ts  radix64.ts  roles.ts  sal.ts  sounds.ts  store.ts  strftime.ts  svelte_actions.ts  update_checker.ts  urls.ts  user_chains.ts  voice_config.ts
client/static/: audio_detector.mjs  electron.css
client/top/: manifest.json  service-worker.js
server/: .gitignore  default.nix  se.taigachat.TaigaChatServer.yml
server/MediaWorker/: Cargo.toml
server/MediaWorker/mediasoup-sys/: Cargo.toml  build.rs
server/MediaWorker/mediasoup-sys/src/: lib.rs
server/MediaWorker/src/: main.rs
server/Source/: asserts.ts  attachments.ts  auth.js  channels.js  config.js  encoding_schemes.js  log.ts  package.json  permissions.js  pnpm-lock.yaml  s3.ts  tsconfig.json  updater.js  users.js
server/media-worker/: Cargo.toml
server/media-worker/sfu/: Cargo.toml
server/media-worker/sfu/src/: lib.rs
server/server/: attachments.ts  auth.ts  channels.ts  config.ts  config_test.ts  deno.json  encoding_schemes.ts  import_map.json  info.ts  informs.ts  json.ts  log.ts  radix64.ts  roles.ts  rooms.ts  s3.ts  schema.ts  server.ts  users.ts  (+3 more)
(+101 files in other folders)
