[package]
name = "app-launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dirs = "4.0.0"
serde_json = "1.0"
serde = { version = "1.0.140", features = ["derive"] }
clap = { version = "3.2.14", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.59"
tokio-tungstenite = "0.17.2"
futures-util = "0.3.21"
sha2 = "0.10.2"
base64 = "0.13.0"
reqwest = "0.11.11"
dunce = "1.0.2"
flate2 = "1.0.24"
tar = "0.4.38"
console-subscriber = { version = "0.1.8", optional = true }
open = "3.2.0"
url = "2.3.1"
log = "0.4.17"
env_logger = "0.10.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(not(windows))'.dependencies]
nix = "0.24"
