# Please note that this crate is only supposed to be build on windows.
[package]
name = "media-worker-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
media-worker-sfu = { path = 'sfu', default-features = false }
tokio = { version = "1.41.1", features = ["full"] }

[patch.crates-io]
mediasoup-sys = { path = 'mediasoup-sys' }
