[package]
name = "media-worker-sfu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
futures-core = "0.3.31"
futures-util = { version = "0.3.26", features = ["sink"] }
log = "0.4.17"
mediasoup = "0.17.1"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.18.0" }
tokio-util = { version = "0.7.12", features = ["codec"] }
url = "2.3.1"

